compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_fully_qualifies_unreachable_public_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport request\nimport wisp\n\npub fn main(expected: wisp.Request, given: request.Request(String)) {\n  expected == given\n}\n"
---
----- SOURCE CODE
-- some/deep/implementation.gleam
pub type Connection

-- request.gleam
pub type Request(a)

-- wisp.gleam
import request
import some/deep/implementation

pub type Request = request.Request(implementation.Connection)

-- main.gleam

import request
import wisp

pub fn main(expected: wisp.Request, given: request.Request(String)) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:15
  │
6 │   expected == given
  │               ^^^^^

Expected type:

    request.Request(some/deep/implementation.Connection)

Found type:

    request.Request(String)
