compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_keeps_irrelevant_nested_alias_in_consolidated_expansion.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Connection =\n  List(Int)\n\npub type Error =\n  List(String)\n\npub type Request =\n  Result(Connection, Error)\n\npub fn main(expected: Request, given: Result(List(Float), Error)) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type Connection =
  List(Int)

pub type Error =
  List(String)

pub type Request =
  Result(Connection, Error)

pub fn main(expected: Request, given: Result(List(Float), Error)) {
  expected == given
}


----- ERROR
error: Type mismatch
   ┌─ /src/one/two.gleam:12:15
   │
12 │   expected == given
   │               ^^^^^

Expected type:

    Request

Found type:

    Result(List(Float), Error)

Hint: The expected type expands to:

    Result(List(Int), Error)
