compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_uses_type_alias_with_internal_generic_argument.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n@internal\npub type Connection\n\npub type Request =\n  List(Connection)\n\npub fn main(request: Request) {\n  request == [1]\n}\n"
---
----- SOURCE CODE

@internal
pub type Connection

pub type Request =
  List(Connection)

pub fn main(request: Request) {
  request == [1]
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:9:14
  │
9 │   request == [1]
  │              ^^^

Expected type:

    Request

Found type:

    List(Int)

Hint: The expected type expands to:

    List(Connection)
