compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_uses_unqualified_imported_type_alias.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport aliases.{type Aliased}\n\npub fn main() {\n  let value: Aliased = #(1, \"one\")\n}\n"
---
----- SOURCE CODE
-- aliases.gleam
pub type Aliased =
  Result(Int, String)

-- main.gleam

import aliases.{type Aliased}

pub fn main() {
  let value: Aliased = #(1, "one")
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:24
  │
5 │   let value: Aliased = #(1, "one")
  │                        ^^^^^^^^^^^

Expected type:

    Aliased

Found type:

    #(Int, String)

Hint: The expected type expands to:

    Result(Int, String)
