compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__float_operator_on_ints_in_guard_gt.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 3 { x if x >. 2 -> \"a\" _ -> \"b\" }"
---
----- SOURCE CODE
case 3 { x if x >. 2 -> "a" _ -> "b" }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ case 3 { x if x >. 2 -> "a" _ -> "b" }
  │               ^^^^^^ Use > instead

The >. operator can only be used on Floats.
