compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__function_return_annotation_mismatch_with_try.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 403
expression: "fn() -> Result(Nil, Nil) {\n            let a = 1\n            try _ = Error(1)\n            // comments\n            // comments\n            // comments\n            // comments\n            // comments\n            // comments\n            // comments\n            // comments\n            // comments\n            // comments\n            Ok(Nil)\n        }"
---
error: Type mismatch
   ┌─ /src/one/two.gleam:3:13
   │  
 3 │ ╭             try _ = Error(1)
 4 │ │             // comments
 5 │ │             // comments
 6 │ │             // comments
   · │
13 │ │             // comments
14 │ │             Ok(Nil)
   │ ╰───────────────────^

The type of this returned value doesn't match the return type 
annotation of this function.

Expected type:

    Result(Nil, Nil)

Found type:

    Result(Nil, Int)

